[package]
name = "async-file-lock"
version = "0.1.3"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["async", "file", "lock"]
categories = ["asynchronous"]
repository = "https://github.com/Stock84-dev/async-file-lock"
description = "Asynchronous file lock that can auto lock and auto seek."
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["fs", "blocking", "rt-core"] }
fs3 = "0.5.0"
futures-lite = "1.11.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
fork = "0.1.18"
tempfile = "3.2.0"
